--- a/package.json
+++ b/package.json
@@ -10,14 +10,36 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "supabase:init": "supabase init",
+    "supabase:login": "supabase login",
+    "supabase:link": "supabase link --project-ref nsmjtaixgqbdzaxrpupi",
+    "db:migrate:new": "supabase migration new",
+    "db:reset": "supabase db reset --linked",
+    "db:seed": "node --env-file=.env database/seed.js",
+    "supabase:types": "npx supabase gen types typescript --project-id nsmjtaixgqbdzaxrpupi --schema public > database/types.ts"
   },
   "dependencies": {
+    "@formkit/vue": "^1.7.2",
+    "@iconify/vue": "^5.0.0",
+    "@supabase/supabase-js": "^2.91.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueuse/core": "^14.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "iconify-icon": "^3.0.2",
+    "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
+    "reka-ui": "^2.8.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.26",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.2.0",
     "@tsconfig/node24": "^24.0.4",
     "@types/node": "^24.10.9",
     "@vitejs/plugin-vue": "^6.0.3",
@@ -29,7 +51,12 @@
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.8.1",
+    "supabase": "^2.72.8",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
+    "unplugin-auto-import": "^21.0.0",
+    "unplugin-vue-components": "^31.0.0",
+    "unplugin-vue-router": "^0.19.2",
     "vite": "beta",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vue-tsc": "^3.2.2"
